JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/a01.c
ALGORITHM(a01){
  x=y;
}