JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test11.c
ALGORITHM(test11){
	encore === moins;
}
